src/testing/private_tests/negative_tests/bad_include_cycle2.eds
#include "bad_include_cycle1.eds"

int func2(int a) {
    int i;
    i = func1(a);
    return i*i;
}
